k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: renato-eleve
  labels:
    app.kubernetes.io/name: renato-eleve
