k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: renato-eleve-ingress
  namespace: renato-eleve
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - eleveguindastes.com.br
      secretName: renato-eleve-tls
  rules:
    - host: eleveguindastes.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: renato-eleve-service
                port:
                  number: 80
